APIs/googleapis.com/cloudresourcemanager/v1/java-client/README.md
# openapi-java-client

Cloud Resource Manager API
- API version: v1
  - Build date: 2024-10-12T11:36:31.565499-04:00[America/New_York]
  - Generator version: 7.9.0

Creates, reads, and updates metadata for Google Cloud Platform resource containers.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v1"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v1.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.LiensApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://cloudresourcemanager.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    LiensApi apiInstance = new LiensApi(defaultClient);
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    Lien lien = new Lien(); // Lien | 
    try {
      Lien result = apiInstance.cloudresourcemanagerLiensCreate($xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, lien);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling LiensApi#cloudresourcemanagerLiensCreate");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudresourcemanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*LiensApi* | [**cloudresourcemanagerLiensCreate**](docs/LiensApi.md#cloudresourcemanagerLiensCreate) | **POST** /v1/liens | 
*LiensApi* | [**cloudresourcemanagerLiensDelete**](docs/LiensApi.md#cloudresourcemanagerLiensDelete) | **DELETE** /v1/{name} | 
*LiensApi* | [**cloudresourcemanagerLiensList**](docs/LiensApi.md#cloudresourcemanagerLiensList) | **GET** /v1/liens | 
*OrganizationsApi* | [**cloudresourcemanagerOrganizationsGet**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsGet) | **GET** /v1/{name} | 
*OrganizationsApi* | [**cloudresourcemanagerOrganizationsGetIamPolicy**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsGetIamPolicy) | **POST** /v1/{resource}:getIamPolicy | 
*OrganizationsApi* | [**cloudresourcemanagerOrganizationsSearch**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsSearch) | **POST** /v1/organizations:search | 
*OrganizationsApi* | [**cloudresourcemanagerOrganizationsSetIamPolicy**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsSetIamPolicy) | **POST** /v1/{resource}:setIamPolicy | 
*OrganizationsApi* | [**cloudresourcemanagerOrganizationsTestIamPermissions**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsTestIamPermissions) | **POST** /v1/{resource}:testIamPermissions | 
*ProjectsApi* | [**cloudresourcemanagerProjectsClearOrgPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsClearOrgPolicy) | **POST** /v1/{resource}:clearOrgPolicy | 
*ProjectsApi* | [**cloudresourcemanagerProjectsCreate**](docs/ProjectsApi.md#cloudresourcemanagerProjectsCreate) | **POST** /v1/projects | 
*ProjectsApi* | [**cloudresourcemanagerProjectsDelete**](docs/ProjectsApi.md#cloudresourcemanagerProjectsDelete) | **DELETE** /v1/projects/{projectId} | 
*ProjectsApi* | [**cloudresourcemanagerProjectsGet**](docs/ProjectsApi.md#cloudresourcemanagerProjectsGet) | **GET** /v1/projects/{projectId} | 
*ProjectsApi* | [**cloudresourcemanagerProjectsGetAncestry**](docs/ProjectsApi.md#cloudresourcemanagerProjectsGetAncestry) | **POST** /v1/projects/{projectId}:getAncestry | 
*ProjectsApi* | [**cloudresourcemanagerProjectsGetEffectiveOrgPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsGetEffectiveOrgPolicy) | **POST** /v1/{resource}:getEffectiveOrgPolicy | 
*ProjectsApi* | [**cloudresourcemanagerProjectsGetIamPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsGetIamPolicy) | **POST** /v1/projects/{resource}:getIamPolicy | 
*ProjectsApi* | [**cloudresourcemanagerProjectsGetOrgPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsGetOrgPolicy) | **POST** /v1/{resource}:getOrgPolicy | 
*ProjectsApi* | [**cloudresourcemanagerProjectsList**](docs/ProjectsApi.md#cloudresourcemanagerProjectsList) | **GET** /v1/projects | 
*ProjectsApi* | [**cloudresourcemanagerProjectsListAvailableOrgPolicyConstraints**](docs/ProjectsApi.md#cloudresourcemanagerProjectsListAvailableOrgPolicyConstraints) | **POST** /v1/{resource}:listAvailableOrgPolicyConstraints | 
*ProjectsApi* | [**cloudresourcemanagerProjectsListOrgPolicies**](docs/ProjectsApi.md#cloudresourcemanagerProjectsListOrgPolicies) | **POST** /v1/{resource}:listOrgPolicies | 
*ProjectsApi* | [**cloudresourcemanagerProjectsSetIamPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsSetIamPolicy) | **POST** /v1/projects/{resource}:setIamPolicy | 
*ProjectsApi* | [**cloudresourcemanagerProjectsSetOrgPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsSetOrgPolicy) | **POST** /v1/{resource}:setOrgPolicy | 
*ProjectsApi* | [**cloudresourcemanagerProjectsTestIamPermissions**](docs/ProjectsApi.md#cloudresourcemanagerProjectsTestIamPermissions) | **POST** /v1/projects/{resource}:testIamPermissions | 
*ProjectsApi* | [**cloudresourcemanagerProjectsUndelete**](docs/ProjectsApi.md#cloudresourcemanagerProjectsUndelete) | **POST** /v1/projects/{projectId}:undelete | 
*ProjectsApi* | [**cloudresourcemanagerProjectsUpdate**](docs/ProjectsApi.md#cloudresourcemanagerProjectsUpdate) | **PUT** /v1/projects/{projectId} | 


## Documentation for Models

 - [Ancestor](docs/Ancestor.md)
 - [AuditConfig](docs/AuditConfig.md)
 - [AuditLogConfig](docs/AuditLogConfig.md)
 - [Binding](docs/Binding.md)
 - [BooleanPolicy](docs/BooleanPolicy.md)
 - [ClearOrgPolicyRequest](docs/ClearOrgPolicyRequest.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation.md)
 - [Constraint](docs/Constraint.md)
 - [CreateFolderMetadata](docs/CreateFolderMetadata.md)
 - [CreateProjectMetadata](docs/CreateProjectMetadata.md)
 - [Expr](docs/Expr.md)
 - [FolderOperation](docs/FolderOperation.md)
 - [FolderOperationError](docs/FolderOperationError.md)
 - [GetAncestryResponse](docs/GetAncestryResponse.md)
 - [GetEffectiveOrgPolicyRequest](docs/GetEffectiveOrgPolicyRequest.md)
 - [GetIamPolicyRequest](docs/GetIamPolicyRequest.md)
 - [GetOrgPolicyRequest](docs/GetOrgPolicyRequest.md)
 - [GetPolicyOptions](docs/GetPolicyOptions.md)
 - [Lien](docs/Lien.md)
 - [ListAvailableOrgPolicyConstraintsRequest](docs/ListAvailableOrgPolicyConstraintsRequest.md)
 - [ListAvailableOrgPolicyConstraintsResponse](docs/ListAvailableOrgPolicyConstraintsResponse.md)
 - [ListConstraint](docs/ListConstraint.md)
 - [ListLiensResponse](docs/ListLiensResponse.md)
 - [ListOrgPoliciesRequest](docs/ListOrgPoliciesRequest.md)
 - [ListOrgPoliciesResponse](docs/ListOrgPoliciesResponse.md)
 - [ListPolicy](docs/ListPolicy.md)
 - [ListProjectsResponse](docs/ListProjectsResponse.md)
 - [MoveFolderMetadata](docs/MoveFolderMetadata.md)
 - [Operation](docs/Operation.md)
 - [OrgPolicy](docs/OrgPolicy.md)
 - [Organization](docs/Organization.md)
 - [OrganizationOwner](docs/OrganizationOwner.md)
 - [Policy](docs/Policy.md)
 - [Project](docs/Project.md)
 - [ProjectCreationStatus](docs/ProjectCreationStatus.md)
 - [ResourceId](docs/ResourceId.md)
 - [SearchOrganizationsRequest](docs/SearchOrganizationsRequest.md)
 - [SearchOrganizationsResponse](docs/SearchOrganizationsResponse.md)
 - [SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [SetOrgPolicyRequest](docs/SetOrgPolicyRequest.md)
 - [Status](docs/Status.md)
 - [TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



