APIs/googleapis.com/cloudresourcemanager/v2/java-client/README.md
# openapi-java-client

Cloud Resource Manager API
- API version: v2
  - Build date: 2024-10-12T11:36:34.748739-04:00[America/New_York]
  - Generator version: 7.9.0

Creates, reads, and updates metadata for Google Cloud Platform resource containers.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v2</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v2"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v2.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.FoldersApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://cloudresourcemanager.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    FoldersApi apiInstance = new FoldersApi(defaultClient);
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    String parent = "parent_example"; // String | Required. The resource name of the new Folder's parent. Must be of the form `folders/{folder_id}` or `organizations/{org_id}`.
    Folder folder = new Folder(); // Folder | 
    try {
      Operation result = apiInstance.cloudresourcemanagerFoldersCreate($xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, parent, folder);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling FoldersApi#cloudresourcemanagerFoldersCreate");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudresourcemanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FoldersApi* | [**cloudresourcemanagerFoldersCreate**](docs/FoldersApi.md#cloudresourcemanagerFoldersCreate) | **POST** /v2/folders | 
*FoldersApi* | [**cloudresourcemanagerFoldersDelete**](docs/FoldersApi.md#cloudresourcemanagerFoldersDelete) | **DELETE** /v2/{name} | 
*FoldersApi* | [**cloudresourcemanagerFoldersGet**](docs/FoldersApi.md#cloudresourcemanagerFoldersGet) | **GET** /v2/{name} | 
*FoldersApi* | [**cloudresourcemanagerFoldersGetIamPolicy**](docs/FoldersApi.md#cloudresourcemanagerFoldersGetIamPolicy) | **POST** /v2/{resource}:getIamPolicy | 
*FoldersApi* | [**cloudresourcemanagerFoldersList**](docs/FoldersApi.md#cloudresourcemanagerFoldersList) | **GET** /v2/folders | 
*FoldersApi* | [**cloudresourcemanagerFoldersMove**](docs/FoldersApi.md#cloudresourcemanagerFoldersMove) | **POST** /v2/{name}:move | 
*FoldersApi* | [**cloudresourcemanagerFoldersPatch**](docs/FoldersApi.md#cloudresourcemanagerFoldersPatch) | **PATCH** /v2/{name} | 
*FoldersApi* | [**cloudresourcemanagerFoldersSearch**](docs/FoldersApi.md#cloudresourcemanagerFoldersSearch) | **POST** /v2/folders:search | 
*FoldersApi* | [**cloudresourcemanagerFoldersSetIamPolicy**](docs/FoldersApi.md#cloudresourcemanagerFoldersSetIamPolicy) | **POST** /v2/{resource}:setIamPolicy | 
*FoldersApi* | [**cloudresourcemanagerFoldersTestIamPermissions**](docs/FoldersApi.md#cloudresourcemanagerFoldersTestIamPermissions) | **POST** /v2/{resource}:testIamPermissions | 
*FoldersApi* | [**cloudresourcemanagerFoldersUndelete**](docs/FoldersApi.md#cloudresourcemanagerFoldersUndelete) | **POST** /v2/{name}:undelete | 
*OperationsApi* | [**cloudresourcemanagerOperationsGet**](docs/OperationsApi.md#cloudresourcemanagerOperationsGet) | **GET** /v1/{name} | 


## Documentation for Models

 - [AuditConfig](docs/AuditConfig.md)
 - [AuditLogConfig](docs/AuditLogConfig.md)
 - [Binding](docs/Binding.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation.md)
 - [CreateFolderMetadata](docs/CreateFolderMetadata.md)
 - [CreateProjectMetadata](docs/CreateProjectMetadata.md)
 - [Expr](docs/Expr.md)
 - [Folder](docs/Folder.md)
 - [FolderOperation](docs/FolderOperation.md)
 - [FolderOperationError](docs/FolderOperationError.md)
 - [GetIamPolicyRequest](docs/GetIamPolicyRequest.md)
 - [GetPolicyOptions](docs/GetPolicyOptions.md)
 - [ListFoldersResponse](docs/ListFoldersResponse.md)
 - [MoveFolderMetadata](docs/MoveFolderMetadata.md)
 - [MoveFolderRequest](docs/MoveFolderRequest.md)
 - [Operation](docs/Operation.md)
 - [Policy](docs/Policy.md)
 - [ProjectCreationStatus](docs/ProjectCreationStatus.md)
 - [SearchFoldersRequest](docs/SearchFoldersRequest.md)
 - [SearchFoldersResponse](docs/SearchFoldersResponse.md)
 - [SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [Status](docs/Status.md)
 - [TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



